# llm-sons

./: .gitignore  CMakeLists.txt  readme.md  son.0.ipynb  son.1.ipynb  son.1.py  transformer_exp.ipynb
csrc/: bpe.cpp  test.cpp
scripts/: test_ds.sh
src/: bpe.py  gpt.py
